--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Group C, MMS 142
 ---
 <div class="blurb">
-	<h1>Hi there, We are GRoup C!!</h1>
-	<p> content <em>MMS 142</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, We are Group C!!</h1>
+	<p> content <em>MMS 142</em> Don't trust me. <a href="/about"> Read more about my life... </a></p>
 </div><!-- /.blurb -->
