--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: https://user-images.githubusercontent.com/74237653/100712296-7ea5e880-33ed-11eb-824d-b8f38b5d2580.gif
+  background-image: https://user-images.githubusercontent.com/74237653/100712296-7ea5e880-33ed-11eb-824d-b8f38b5d2580.gif ("74237653/100712296-7ea5e880-33ed-11eb-824d-b8f38b5d2580.gif")
   min-height: 75%;
 }
 
@@ -67,7 +67,7 @@ body, html {
       <p><i>I wanna Die</i></p>
       <p>Enter Group Members here</p>
     </div>
-    <img src="/w3images/coffeeshop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="74237653/100712296-7ea5e880-33ed-11eb-824d-b8f38b5d2580.gif" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Rawr</strong> Rawr </p>
     <p><strong>rawr</strong> rawr</p>
   </div>
