--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
   <main>
     <section class="sec01" id="sec01">
-      <h2 class="secTitle">What is Disruptive Tecnology?</h2>
+      <h2 class="secTitle">What is Disruptive Technology?</h2>
       <div class="sec01__content">
         <div class="sec01__video">
           <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -33,7 +33,7 @@
       </div>
     </section>
     <section class="sec02" id="sec02">
-      <h2 class="secTitle">What is Disruptive Tecnology?</h2>
+      <h2 class="secTitle">Examples of Disruptive Technology?</h2>
       <div class="sec02__content">
         <div class="sec02__video">
           <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -41,7 +41,7 @@
       </div>
     </section>
     <section class="sec03" id="sec03">
-      <h2 class="secTitle">What is Disruptive Tecnology?</h2>
+      <h2 class="secTitle">E-commerce</h2>
       <div class="sec03__content">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
@@ -61,7 +61,7 @@
       </div>
     </section>
     <section class="sec04" id="sec04">
-      <h2 class="secTitle">What is Disruptive Tecnology?</h2>
+      <h2 class="secTitle">Why and How it Affects?</h2>
       <div class="sec03__content">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque veniam ut eum rerum odit accusamus inventore illo, architecto facere sequi, vero molestiae omnis nesciunt? Labore recusandae quidem distinctio alias aperiam!
@@ -81,7 +81,7 @@
       </div>
     </section>
     <section class="sec05" id="sec05">
-      <h2 class="secTitle">What is Disruptive Tecnology?</h2>
+      <h1 class="secTitle">References</h1>
       <div class="sec05__content">
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quibusdam inventore minus sint consectetur. Numquam, laborum possimus. Quidem vel soluta ea quis, nostrum molestiae labore! Saepe aliquam cum obcaecati quo.
