--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
       <h2 class="secTitle">Why and How it Affects?</h2>
       <div class="sec03__content">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque veniam ut eum rerum odit accusamus inventore illo, architecto facere sequi, vero molestiae omnis nesciunt? Labore recusandae quidem distinctio alias aperiam!
-        </p>
+          A disruptive technology changes a product that was generally so expensive and complicated that just a few number of individuals with a considerable measure of resources had access to it. A disruptive technology makes it more open and affordable to a much bigger population. At a point when the innovation that has the potential to change an industry develops, established organizations mostly consider it to be unattractive: it's not something which their customers need, and its anticipated profit margins aren't adequate to take care of huge organization technology expense for it. Subsequently, this new innovation gets overlooked. After some time another organization manages to bring the innovation to a new market. Once the disruptive innovation establishes, small scale innovation rapidly raise the technology’s performance on attributes of that of mainstream customers’ value.</p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
         </p>
