--- a/index.html
+++ b/index.html
@@ -44,8 +44,28 @@
       <h2 class="secTitle">E-commerce</h2>
       <div class="sec03__content">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
-        </p>
+         Electronic commerce or internet commerce, popularly known as eCommerce, is the buying and selling of products or services online. It also refers to the transferring of money and data to fulfill the said transactions. Although the term eCommerce mainly refers to the sale of tangible products online, it also covers any transaction made through the internet.
+          There's also a thriving Internet economy. E-commerce revenues are growing by 20% and 25% per year at leaps and limits, which suggest a significant shift in human consumers' buying habits. The Internet is to review convenience items and to receive current information on your search and specifications instead of telephone directories or yellow pages.
+
+<h1><strong>Benefits of Ecommerce:</strong></h1>
+
+<p><strong>Low Startup Cost</strong></p>
+A lot of aspiring business owners will get a chance to start their own brand at way lower costs if they go online, instead of the traditional business model. Business owners will save up on rental, utility, and material costs.
+
+Potential to Earn Income 24/7
+People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.
+
+<p><strong>Easy to Expand Internationally</strong></p>
+For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.
+
+<p><strong>Comfortable Shopping Experience for Customers</strong></p>
+Unlike in physical stores, customers will not have their privacy invaded by other shoppers and retail workers.
+
+Processing a Huge Number of Orders is Manageable
+Long queues don’t exist in eCommerce and online shopping sites are fully capable of processing hundreds and even thousands of orders at the same time.
+
+<p><strong>Time and Money-saving Shopping Experience</strong></p>
+<p>Customers won’t spend gas money or fare if they shop online. The time they usually spend on traveling to a physical store will also be saved. We spend low operating expenses when we purchase from an online store; we have higher service quality and therefore extra costs will save us unnecessary costs. For instance, shipping costs are absolutely canceled if our goods or services are downloadable. More and more discounts and offers cannot be avoided for any online company, which is really nice for customers. </p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
         </p>
