--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title> E-COMMERCE: A DISRUPTIVE TECHNOLOGY </title>
-  <link rel="stylesheet" type="text/css" href="./_assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <header>
