--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2 class="secTitle">Examples of Disruptive Technology?</h2>
       <div class="sec02__content">
         <div class="sec02__video">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XeLFFf6xVv4&t=25s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/v=XeLFFf6xVv4&t=25s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </section>
