--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2 class="secTitle">Examples of Disruptive Technology?</h2>
       <div class="sec02__content">
         <div class="sec02__video">
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/XeLFFf6xVv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/XeLFFf6xVv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
     <section class="sec03" id="sec03">
