--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2 class="secTitle">What is Disruptive Technology?</h2>
       <div class="sec01__content">
         <div class="sec01__video">
-          <iframe width="500%" height="300%" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </section>
@@ -36,7 +36,7 @@
       <h2 class="secTitle">Examples of Disruptive Technology?</h2>
       <div class="sec02__content">
         <div class="sec02__video">
-         <iframe width="100" height="100" src="https://www.youtube.com/embed/XeLFFf6xVv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XeLFFf6xVv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       </div>
     </section>
