--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       <h2 class="secTitle">What is Disruptive Technology?</h2>
       <div class="sec01__content">
         <div class="sec01__video">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer;      </div>
       </div>
     </section>
     <section class="sec02" id="sec02">
