--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </section>
     <section class="sec03" id="sec03">
       <h2 class="secTitle">E-commerce</h2>
+      <img src="1.gif" alt="E-comm" style="width:100px;height:60px;">
       <div class="sec03__content">
         <p>
          Electronic commerce or internet commerce, popularly known as eCommerce, is the buying and selling of products or services online. It also refers to the transferring of money and data to fulfill the said transactions. Although the term eCommerce mainly refers to the sale of tangible products online, it also covers any transaction made through the internet.
