--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@ Long queues don’t exist in eCommerce and online shopping sites are fully capab
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
-        </p>
+         The retail industry has moved linearly, as with other industries, and business practices and experience in the past are largely obsolete. However, retail automation accelerates harder and longer than we expect.
+
+Technology plays a vital role and more of our day-to-day decision-making is influenced. Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
         </p>
