--- a/index.html
+++ b/index.html
@@ -71,40 +71,25 @@ Long queues don’t exist in eCommerce and online shopping sites are fully capab
       <div class="sec03__content">
         <p>
            A disruptive technology <strong>changes a product that was generally so expensive and complicated </strong> that just a few number of individuals with a considerable measure of resources had access to it. A disruptive technology makes it more open and affordable to a much bigger population. At a point when the innovation that has the potential to change an industry develops, established organizations mostly consider it to be unattractive: it's not something which their customers need, and its anticipated profit margins aren't adequate to take care of huge organization technology expense for it. Subsequently, this new innovation gets overlooked. After some time another organization manages to bring the innovation to a new market. Once the disruptive innovation establishes, small scale innovation rapidly raise the technology’s performance on attributes of that of mainstream customers’ value.  <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
+         
         </p>
         <p>
          The retail industry has moved linearly, as with other industries, and business practices and experience in the past are largely obsolete. However, retail automation accelerates harder and longer than we expect.
-
-Technology plays a vital role and more of our day-to-day decision-making is influenced. Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </p>
+          <br>
+          Technology plays a vital role and more of our day-to-day decision-making is influenced. 
+          <br>
+          Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
+       insert text here
         </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
-        </p>
+  
       </div>
     </section>
     <section class="sec05" id="sec05">
       <h1 class="secTitle">References</h1>
       <div class="sec05__content">
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quibusdam inventore minus sint consectetur. Numquam, laborum possimus. Quidem vel soluta ea quis, nostrum molestiae labore! Saepe aliquam cum obcaecati quo.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iusto reprehenderit temporibus officiis at, dolore ex quidem eum quis iure ea ullam vero autem doloribus! Enim amet magni voluptatum reiciendis.
+       insert text here
         </p>
       </div>
     </section>
