--- a/index.html
+++ b/index.html
@@ -46,37 +46,47 @@
           There's also a thriving Internet economy. E-commerce revenues are growing by 20% and 25% per year at leaps and limits, which suggest a significant shift in human consumers' buying habits. The Internet is to review convenience items and to receive current information on your search and specifications instead of telephone directories or yellow pages.
 
 <h1><strong>Benefits of Ecommerce:</strong></h1>
-
+<br>
+<br>
 <p><strong>Low Startup Cost</strong></p>
-A lot of aspiring business owners will get a chance to start their own brand at way lower costs if they go online, instead of the traditional business model. Business owners will save up on rental, utility, and material costs.
-
-Potential to Earn Income 24/7
-People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.
-
+<p>A lot of aspiring business owners will get a chance to start their own brand at way lower costs if they go online, instead of the traditional business model. Business owners will save up on rental, utility, and material costs.</p>
+<br>
+<p><strong>Potential to Earn Income 24/7</strong></p>
+<br>
+<p>People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.<p>
+<br>
 <p><strong>Easy to Expand Internationally</strong></p>
-For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.
-
+<p>For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.</p>
+<br>
 <p><strong>Comfortable Shopping Experience for Customers</strong></p>
+<br>
 Unlike in physical stores, customers will not have their privacy invaded by other shoppers and retail workers.
-
-Processing a Huge Number of Orders is Manageable
-Long queues don’t exist in eCommerce and online shopping sites are fully capable of processing hundreds and even thousands of orders at the same time.
-
+<br>
+<p><strong>Processing a Huge Number of Orders is Manageable.</strong></p>
+<p>Long queues don’t exist in eCommerce and online shopping sites are fully capable of processing hundreds and even thousands of orders at the same time.</p>
+<br>
 <p><strong>Time and Money-saving Shopping Experience</strong></p>
-<p>Customers won’t spend gas money or fare if they shop online. The time they usually spend on traveling to a physical store will also be saved. We spend low operating expenses when we purchase from an online store; we have higher service quality and therefore extra costs will save us unnecessary costs. For instance, shipping costs are absolutely canceled if our goods or services are downloadable. More and more discounts and offers cannot be avoided for any online company, which is really nice for customers. </p>
+<br>
+<p>Customers won’t spend gas money or fare if they shop online. The time they usually spend on traveling to a physical store will also be saved. We spend low operating expenses when we purchase from an online store; we have higher service quality and therefore extra costs will save us unnecessary costs. 
+ <br>
+  For instance, shipping costs are absolutely canceled if our goods or services are downloadable. More and more discounts and offers cannot be avoided for any online company, which is really nice for customers. </p>
       </div>
     </section>
     <section class="sec04" id="sec04">
       <h2 class="secTitle">Why and How it Affects?</h2>
       <div class="sec03__content">
         <p>
-           A disruptive technology <strong>changes a product that was generally so expensive and complicated </strong> that just a few number of individuals with a considerable measure of resources had access to it. A disruptive technology makes it more open and affordable to a much bigger population. At a point when the innovation that has the potential to change an industry develops, established organizations mostly consider it to be unattractive: it's not something which their customers need, and its anticipated profit margins aren't adequate to take care of huge organization technology expense for it. Subsequently, this new innovation gets overlooked. After some time another organization manages to bring the innovation to a new market. Once the disruptive innovation establishes, small scale innovation rapidly raise the technology’s performance on attributes of that of mainstream customers’ value.  <p>
-         
+           A disruptive technology <strong>changes a product that was generally so expensive and complicated </strong> that just a few number of individuals with a considerable measure of resources had access to it. A disruptive technology makes it more open and affordable to a much bigger population. At a point when the innovation that has the potential to change an industry develops, established organizations mostly consider it to be unattractive: it's not something which their customers need, and its anticipated profit margins aren't adequate to take care of huge organization technology expense for it. Subsequently, this new innovation gets overlooked. After some time another organization manages to bring the innovation to a new market. 
+          <br>
+          Once the disruptive innovation establishes, small scale innovation rapidly raise the technology’s performance on attributes of that of mainstream customers’ value.
         </p>
+         <br>
         <p>
          The retail industry has moved linearly, as with other industries, and business practices and experience in the past are largely obsolete. However, retail automation accelerates harder and longer than we expect.
           <br>
+          <br>
           Technology plays a vital role and more of our day-to-day decision-making is influenced. 
+          <br>
           <br>
           Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </p>
         <p>
