--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           There's also a thriving Internet economy. E-commerce revenues are growing by 20% and 25% per year at leaps and limits, which suggest a significant shift in human consumers' buying habits. The Internet is to review convenience items and to receive current information on your search and specifications instead of telephone directories or yellow pages.
 <br>
 <br>
-<h1><strong>Benefits of Ecommerce:</strong></h1>
+<h1><center><strong>Benefits of Ecommerce:</strong></center></h1>
 <br>
 <br>
 <p><strong>Low Startup Cost</strong></p>
