--- a/index.html
+++ b/index.html
@@ -81,7 +81,16 @@ Unlike in physical stores, customers will not have their privacy invaded by othe
       <h2 class="secTitle">Why and How it Affects?</h2>
       <div class="sec03__content">
         <p>
-           A disruptive technology <strong>changes a product that was generally so expensive and complicated </strong> that just a few number of individuals with a considerable measure of resources had access to it. A disruptive technology makes it more open and affordable to a much bigger population. At a point when the innovation that has the potential to change an industry develops, established organizations mostly consider it to be unattractive: it's not something which their customers need, and its anticipated profit margins aren't adequate to take care of huge organization technology expense for it. Subsequently, this new innovation gets overlooked. After some time another organization manages to bring the innovation to a new market. 
+           At quite a rapid rate, the industry is advancing. Technological developments are transforming the way we work, live, and do business. In technology, there are two forms of innovations: sustaining and disruptive. The technology that innovates successively from occasionally is sustaining technology. Disruptive technology is a newly invented technology that produces much more value than current technology and has the ability to change the way we operate, live, do business, and improve economic performance dramatically.
+<br>
+<br>
+It may take longer to create a disruptive technology than the current technology has taken and it entails more risk for existing technology, but it can achieve a quicker penetration and replace the technology that has been developed, leaving a significant impact.
+<br>
+<br>
+Disruptive technology changes a product that was generally so expensive and complicated that just a few individuals with a considerable measure of resources had access to it. Disruptive technology makes it more open and affordable to a much bigger population. At a point when the innovation that has the potential to change an industry develops, established organizations mostly consider it to be unattractive: it's not something which their customers need, and its anticipated profit margins aren't adequate to take care of huge organization technology expense for it. Subsequently, this innovation gets overlooked.
+<br>
+<br>
+After some time another organization manages to bring innovation to a new market. Once the disruptive innovation establishes, small scale innovation rapidly raises the technology’s performance on attributes of that of mainstream customers’ value.
           <br>
           <br>
           Once the disruptive innovation establishes, small scale innovation rapidly raise the technology’s performance on attributes of that of mainstream customers’ value.
