--- a/index.html
+++ b/index.html
@@ -100,13 +100,11 @@ After some time another organization manages to bring innovation to a new market
          The retail industry has moved linearly, as with other industries, and business practices and experience in the past are largely obsolete. However, retail automation accelerates harder and longer than we expect.
           <br>
           <br>
-          Technology plays a vital role and more of our day-to-day decision-making is influenced. 
+          <center><strong>Technology plays a vital role and more of our day-to-day decision-making is influenced.</strong></center>
           <br>
           <br>
-          Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </p>
-        <p>
-       insert text here
-        </p>
+          <center><strong>Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </p></center></strong>
+     
   
       </div>
     </section>
