--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <h2 class="secTitle">What is Disruptive Technology?</h2>
       <div class="sec01__content">
         <div class="sec01__video">
-         <iframe width=500 height=500 align="center" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;gyroscope; picture-in-picture "allowfullscreen></iframe></div>
+         <width=500 height=500 align="center" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;gyroscope; picture-in-picture "allowfullscreen></div>
       </div>
     </section>
     <section class="sec02" id="sec02">
       <h2 class="secTitle">Examples of Disruptive Technology?</h2>
       <div class="sec02__content">
         <div class="sec02__video">
-         <iframe width=500 height=500 align="center" src="https://www.youtube-nocookie.com/embed/XeLFFf6xVv4?start=25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </div>
+         <width=500 height=500 align="center" src="https://www.youtube-nocookie.com/embed/XeLFFf6xVv4?start=25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>  </div>
       </div>
     </section>
     <section class="sec03" id="sec03">
