--- a/index.html
+++ b/index.html
@@ -28,21 +28,24 @@
       <h2 class="secTitle">What is Disruptive Technology?</h2>
       <div class="sec01__content">
         <div class="sec01__video">
-         <width=500 height=500 align="center" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;gyroscope; picture-in-picture "allowfullscreen></div>
+         <src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;gyroscope; picture-in-picture" allowfullscreen width="500" height="500" align="center" ></div>
       </div>
     </section>
     <section class="sec02" id="sec02">
       <h2 class="secTitle">Examples of Disruptive Technology?</h2>
       <div class="sec02__content">
         <div class="sec02__video">
-         <width=500 height=500 align="center" src="https://www.youtube-nocookie.com/embed/XeLFFf6xVv4?start=25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>  </div>
+         <src="https://www.youtube-nocookie.com/embed/XeLFFf6xVv4?start=25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="500" height="500" align="center">  </div>
       </div>
     </section>
     <section class="sec03" id="sec03">
       <h2 class="secTitle">E-commerce</h2>
       <div class="sec03__content">
         <p>
-         Electronic commerce or internet commerce, popularly known as eCommerce, is the buying and selling of products or services online. It also refers to the transferring of money and data to fulfill the said transactions. Although the term eCommerce mainly refers to the sale of tangible products online, it also covers any transaction made through the internet.
+         Electronic commerce or internet commerce, popularly known as eCommerce, is the buying and selling of products or services online. It also refers to the transferring of money and data to fulfill the said transactions. 
+          <br>
+          <br>
+          Although the term eCommerce mainly refers to the sale of tangible products online, it also covers any transaction made through the internet.
           There's also a thriving Internet economy. E-commerce revenues are growing by 20% and 25% per year at leaps and limits, which suggest a significant shift in human consumers' buying habits. The Internet is to review convenience items and to receive current information on your search and specifications instead of telephone directories or yellow pages.
 <br>
 <br>
