--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <section class="sec01" id="sec01">
       <h2 class="secTitle">What is Disruptive Technology?</h2>
       <div class="sec01__content">
-        <div class="sec01__video">
+        <div class="sec01__video" style="text-align:center;">
          <iframe width="560" height="315" src="https://www.youtube.com/embed/Cu6J6taqOSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
     <section class="sec02" id="sec02">
       <h2 class="secTitle">Examples of Disruptive Technology?</h2>
       <div class="sec02__content">
-        <div class="sec02__video">
+        <div class="sec02__video" style="text-align:center;">
        <iframe width="560" height="315" src="https://www.youtube.com/embed/XeLFFf6xVv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
