--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title> E-COMMERCE: A DISRUPTIVE TECHNOLOGY </title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body bgcolor='#7b1113' >
   <header>
     <h1 class="siteTitle">E-COMMERCE: A DISRUPTIVE TECHNOLOGY</h1>
     <div class="kv__images">
