--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+div {
+background-color: rgb(123, 17, 19);
+color: rgb(100, 0, 0);
+padding: 30px;
+}
   <title> E-COMMERCE: A DISRUPTIVE TECHNOLOGY </title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body bgcolor='#7b1113' >
+<body>
   <header>
     <h1 class="siteTitle">E-COMMERCE: A DISRUPTIVE TECHNOLOGY</h1>
     <div class="kv__images">
