--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ padding: 30px;
 }
   <title> E-COMMERCE: A DISRUPTIVE TECHNOLOGY </title>
   <link rel="stylesheet" type="text/css" href="style.css">
+    </style>
 </head>
 <body>
   <header>
