--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ background-color: rgb(123, 17, 19);
 color: rgb(100, 0, 0);
 padding: 30px;
 }
+     </style>
   <title> E-COMMERCE: A DISRUPTIVE TECHNOLOGY </title>
   <link rel="stylesheet" type="text/css" href="style.css">
-    </style>
+   
 </head>
 <body>
   <header>
@@ -37,6 +38,7 @@ padding: 30px;
            section iframe {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: auto;
   display: block;
 }>
         
@@ -50,6 +52,7 @@ padding: 30px;
       <div class="sec02__content"    section iframe {
   margin-left: auto;
   margin-right: auto;
+margin-bottom: auto;
   display: block;
 }>
         
