--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   <style>
 div {
 background-color: rgb(123, 17, 19);
-text-color: rgb(0, 0, 0);
 color: rgb(100, 0, 0);
 padding: 30px;
 }
      </style>
+  <style type="text/css">
+.custom {
+	font-family: Courier;
+	color: black;
+	font-size:20px;
+}
+</style>
+  
   <title> E-COMMERCE: A DISRUPTIVE TECHNOLOGY </title>
   <link rel="stylesheet" type="text/css" href="style.css">
    
