--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ padding: 30px;
   <link rel="stylesheet" type="text/css" href="style.css">
    
 </head>
-<body>
+<body text="white">
   <header>
     <h1 class="siteTitle">E-COMMERCE: A DISRUPTIVE TECHNOLOGY</h1>
     <div class="kv__images">
