--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ margin-bottom: auto;
     <section class="sec03" id="sec03">
       <h2 class="secTitle">E-commerce</h2>
       <div class="sec03__content">
-        <p>
+        <p><FONT COLOR=white>
          Electronic commerce or internet commerce, popularly known as eCommerce, is the buying and selling of products or services online. It also refers to the transferring of money and data to fulfill the said transactions. 
           <br>
           <br>
@@ -76,38 +76,39 @@ margin-bottom: auto;
 <h1><center><strong>Benefits of Ecommerce:</strong></center></h1>
 <br>
 <br>
-<p><strong>Low Startup Cost</strong></p>
+<p><FONT COLOR=white><strong>Low Startup Cost</strong></p>
 <br>
-<p>A lot of aspiring business owners will get a chance to start their own brand at way lower costs if they go online, instead of the traditional business model. Business owners will save up on rental, utility, and material costs.</p>
+<p><FONT COLOR=white>A lot of aspiring business owners will get a chance to start their own brand at way lower costs if they go online, instead of the traditional business model. Business owners will save up on rental, utility, and material costs.</FONT></p>
 <br>
-<p><strong>Potential to Earn Income 24/7</strong></p>
+<p><FONT COLOR=white><strong>Potential to Earn Income 24/7</strong></p>
 <br>
-<p>People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.<p>
+<p><FONT COLOR=white>People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.</FONT><p>
 <br>
-<p><strong>Easy to Expand Internationally</strong></p>
+<p><FONT COLOR=white><strong>Easy to Expand Internationally</strong></FONT></p>
 <br>
-<p>For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.</p>
+<p><FONT COLOR=white>For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.</FONT></p>
 <br>
-<p><strong>Comfortable Shopping Experience for Customers</strong></p>
+<p><FONT COLOR=white><strong>Comfortable Shopping Experience for Customers</strong></FONT></p>
 <br>
-Unlike in physical stores, customers will not have their privacy invaded by other shoppers and retail workers.
-<br>
-<p><strong>Processing a Huge Number of Orders is Manageable.</strong></p>
-<br>
-<p>Long queues don’t exist in eCommerce and online shopping sites are fully capable of processing hundreds and even thousands of orders at the same time.</p>
-<br>
-<p><strong>Time and Money-saving Shopping Experience</strong></p>
-<br>
-<p>Customers won’t spend gas money or fare if they shop online. The time they usually spend on traveling to a physical store will also be saved. We spend low operating expenses when we purchase from an online store; we have higher service quality and therefore extra costs will save us unnecessary costs. 
+<p><FONT COLOR=white>Unlike in physical stores, customers will not have their privacy invaded by other shoppers and retail workers.</FONT></p>
 <br>
 <br>
-  For instance, shipping costs are absolutely canceled if our goods or services are downloadable. More and more discounts and offers cannot be avoided for any online company, which is really nice for customers. </p>
+<p><FONT COLOR=white><strong>Processing a Huge Number of Orders is Manageable.</strong></FONT></p>
+<br>
+<p><FONT COLOR=white>Long queues don’t exist in eCommerce and online shopping sites are fully capable of processing hundreds and even thousands of orders at the same time.</FONT></p>
+<br>
+<p><FONT COLOR=white><strong>Time and Money-saving Shopping Experience</strong></FONT></p>
+<br>
+<p><FONT COLOR=white>Customers won’t spend gas money or fare if they shop online. The time they usually spend on traveling to a physical store will also be saved. We spend low operating expenses when we purchase from an online store; we have higher service quality and therefore extra costs will save us unnecessary costs. 
+<br>
+<br>
+  For instance, shipping costs are absolutely canceled if our goods or services are downloadable. More and more discounts and offers cannot be avoided for any online company, which is really nice for customers. </FONT></p>
       </div>
     </section>
     <section class="sec04" id="sec04">
       <h2 class="secTitle">Why and How it Affects?</h2>
       <div class="sec03__content">
-        <p>
+        <p><FONT COLOR=white>
            At quite a rapid rate, the industry is advancing. Technological developments are transforming the way we work, live, and do business. In technology, there are two forms of innovations: sustaining and disruptive. The technology that innovates successively from occasionally is sustaining technology. Disruptive technology is a newly invented technology that produces much more value than current technology and has the ability to change the way we operate, live, do business, and improve economic performance dramatically.
 <br>
 <br>
@@ -121,16 +122,16 @@ After some time another organization manages to bring innovation to a new market
           <br>
           <br>
           Once the disruptive innovation establishes, small scale innovation rapidly raise the technology’s performance on attributes of that of mainstream customers’ value.
-        </p>
+        </FONT></p>
          <br>
-        <p>
+        <p><FONT COLOR=white>
          The retail industry has moved linearly, as with other industries, and business practices and experience in the past are largely obsolete. However, retail automation accelerates harder and longer than we expect.
           <br>
           <br>
           <center><strong>Technology plays a vital role and more of our day-to-day decision-making is influenced.</strong></center>
           <br>
           <br>
-          <center><strong>Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </p></center></strong>
+          <center><strong>Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </center></strong></FONT></p>
      
   
       </div>
@@ -138,9 +139,10 @@ After some time another organization manages to bring innovation to a new market
     <section class="sec05" id="sec05">
       <h1 class="secTitle">References</h1>
       <div class="sec05__content">
-        <p>
+        <p><FONT COLOR=white>
        insert text here
-        </p>
+          
+       </FONT></p>
       </div>
     </section>
   </main>
