--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ padding: 30px;
            section iframe {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 0px;
+  margin-bottom: initial;
   display: block;
 }>
         
@@ -53,7 +53,7 @@ padding: 30px;
       <div class="sec02__content"    section iframe {
   margin-left: auto;
   margin-right: auto;
-margin-bottom: 0px;
+margin-bottom: initial;
   display: block;
 }>
         
