--- a/index.html
+++ b/index.html
@@ -69,31 +69,31 @@ margin-bottom: initial;
           There's also a thriving Internet economy. E-commerce revenues are growing by 20% and 25% per year at leaps and limits, which suggest a significant shift in human consumers' buying habits. The Internet is to review convenience items and to receive current information on your search and specifications instead of telephone directories or yellow pages.
 <br>
 <br>
-<h1><center><strong>Benefits of Ecommerce:</strong></center></h1>
+<h1><center><strong>BENEFITS OF E-COMMERCE</strong></center></h1>
 <br>
 <br>
-<p><FONT COLOR=white><strong>Low Startup Cost</strong></p>
+<p><FONT COLOR=white><center><strong>Low Startup Cost</strong></center></p>
 <br>
 <p><FONT COLOR=white>A lot of aspiring business owners will get a chance to start their own brand at way lower costs if they go online, instead of the traditional business model. Business owners will save up on rental, utility, and material costs.</FONT></p>
 <br>
-<p><FONT COLOR=white><strong>Potential to Earn Income 24/7</strong></p>
+<p><FONT COLOR=white><center><strong>Potential to Earn Income 24/7</center></p>
 <br>
 <p><FONT COLOR=white>People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.</FONT><p>
 <br>
-<p><FONT COLOR=white><strong>Easy to Expand Internationally</strong></FONT></p>
+<p><FONT COLOR=white><center><strong>Easy to Expand Internationally</strong></center></FONT></p>
 <br>
 <p><FONT COLOR=white>For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.</FONT></p>
 <br>
-<p><FONT COLOR=white><strong>Comfortable Shopping Experience for Customers</strong></FONT></p>
+<p><FONT COLOR=white><center><strong>Comfortable Shopping Experience for Customers</strong></center></FONT></p>
 <br>
 <p><FONT COLOR=white>Unlike in physical stores, customers will not have their privacy invaded by other shoppers and retail workers.</FONT></p>
 <br>
 <br>
-<p><FONT COLOR=white><strong>Processing a Huge Number of Orders is Manageable.</strong></FONT></p>
+<p><FONT COLOR=white><center><strong>Processing a Huge Number of Orders is Manageable.</strong></center></FONT></p>
 <br>
 <p><FONT COLOR=white>Long queues don’t exist in eCommerce and online shopping sites are fully capable of processing hundreds and even thousands of orders at the same time.</FONT></p>
 <br>
-<p><FONT COLOR=white><strong>Time and Money-saving Shopping Experience</strong></FONT></p>
+<p><FONT COLOR=white><center><strong>Time and Money-saving Shopping Experience</strong></center></FONT></p>
 <br>
 <p><FONT COLOR=white>Customers won’t spend gas money or fare if they shop online. The time they usually spend on traveling to a physical store will also be saved. We spend low operating expenses when we purchase from an online store; we have higher service quality and therefore extra costs will save us unnecessary costs. 
 <br>
@@ -102,7 +102,7 @@ margin-bottom: initial;
       </div>
     </section>
     <section class="sec04" id="sec04">
-      <h2 class="secTitle">Why and How it Affects?</h2>
+      <h2 class="secTitle">Why and How Disruptive Technology Affects The E-Commerce?</h2>
       <div class="sec03__content">
         <p><FONT COLOR=white>
            At quite a rapid rate, the industry is advancing. Technological developments are transforming the way we work, live, and do business. In technology, there are two forms of innovations: sustaining and disruptive. The technology that innovates successively from occasionally is sustaining technology. Disruptive technology is a newly invented technology that produces much more value than current technology and has the ability to change the way we operate, live, do business, and improve economic performance dramatically.
