--- a/index.html
+++ b/index.html
@@ -74,28 +74,30 @@ margin-bottom: initial;
 <br>
 <p><FONT COLOR=white><center><strong>Low Startup Cost</strong></center></p>
 <br>
-<p><FONT COLOR=white>A lot of aspiring business owners will get a chance to start their own brand at way lower costs if they go online, instead of the traditional business model. Business owners will save up on rental, utility, and material costs.</FONT></p>
+<p>A lot of aspiring business owners will get a chance to start their own brand at way lower costs if they go online, instead of the traditional business model. 
+  Business owners will save up on rental, utility, and material costs.</p>
 <br>
 <p><FONT COLOR=white><center><strong>Potential to Earn Income 24/7</center></p>
 <br>
-<p><FONT COLOR=white>People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.</FONT><p>
+<p>People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.<p>
 <br>
-<p><FONT COLOR=white><center><strong>Easy to Expand Internationally</strong></center></FONT></p>
+<p><center><strong>Easy to Expand Internationally</strong></center></FONT></p>
 <br>
-<p><FONT COLOR=white>For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.</FONT></p>
+<p>For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.</FONT></p>
 <br>
-<p><FONT COLOR=white><center><strong>Comfortable Shopping Experience for Customers</strong></center></FONT></p>
+<p><center><strong>Comfortable Shopping Experience for Customers</strong></center></FONT></p>
 <br>
-<p><FONT COLOR=white>Unlike in physical stores, customers will not have their privacy invaded by other shoppers and retail workers.</FONT></p>
+<p>Unlike in physical stores, customers will not have their privacy invaded by other shoppers and retail workers.</p>
 <br>
 <br>
 <p><FONT COLOR=white><center><strong>Processing a Huge Number of Orders is Manageable.</strong></center></FONT></p>
 <br>
-<p><FONT COLOR=white>Long queues don’t exist in eCommerce and online shopping sites are fully capable of processing hundreds and even thousands of orders at the same time.</FONT></p>
+<p>Long queues don’t exist in eCommerce and online shopping sites are fully capable of processing hundreds and even thousands of orders at the same time.</p>
 <br>
 <p><FONT COLOR=white><center><strong>Time and Money-saving Shopping Experience</strong></center></FONT></p>
 <br>
-<p><FONT COLOR=white>Customers won’t spend gas money or fare if they shop online. The time they usually spend on traveling to a physical store will also be saved. We spend low operating expenses when we purchase from an online store; we have higher service quality and therefore extra costs will save us unnecessary costs. 
+<p>Customers won’t spend gas money or fare if they shop online. The time they usually spend on traveling to a physical store will also be saved. 
+  We spend low operating expenses when we purchase from an online store; we have higher service quality and therefore extra costs will save us unnecessary costs. 
 <br>
 <br>
   For instance, shipping costs are absolutely canceled if our goods or services are downloadable. More and more discounts and offers cannot be avoided for any online company, which is really nice for customers. </FONT></p>
@@ -125,7 +127,6 @@ After some time another organization manages to bring innovation to a new market
           <br>
           <br>
           <center><strong>Technology plays a vital role and more of our day-to-day decision-making is influenced.</strong></center>
-          <br>
           <br>
           <center><strong>Technological innovations such as 3d modeling, image recognition, augmented reality, and robotics are evolving and give distributors new ways to engage consumers and operate their company more efficiently, although their expenses continue to decline. </center></strong></FONT></p>
      
