--- a/index.html
+++ b/index.html
@@ -62,11 +62,15 @@ margin-bottom: initial;
       <h2 class="secTitle">E-commerce</h2>
       <div class="sec03__content">
         <p><FONT COLOR=white>
-         Electronic commerce or internet commerce, popularly known as eCommerce, is the buying and selling of products or services online. It also refers to the transferring of money and data to fulfill the said transactions. 
+         Electronic commerce or internet commerce, popularly known as eCommerce, is the buying and selling of products or services online. 
+          It also refers to the transferring of money and data to fulfill the said transactions. 
           <br>
           <br>
           Although the term eCommerce mainly refers to the sale of tangible products online, it also covers any transaction made through the internet.
-          There's also a thriving Internet economy. E-commerce revenues are growing by 20% and 25% per year at leaps and limits, which suggest a significant shift in human consumers' buying habits. The Internet is to review convenience items and to receive current information on your search and specifications instead of telephone directories or yellow pages.
+          There's also a thriving Internet economy. 
+          E-commerce revenues are growing by 20% and 25% per year at leaps and limits, which suggest a significant shift in human consumers' buying habits. 
+          The Internet is to review convenience items and to receive current information on your search and specifications instead of telephone directories or yellow pages.
+          </p></FONT>
 <br>
 <br>
 <h1><center><strong>BENEFITS OF E-COMMERCE</strong></center></h1>
@@ -83,7 +87,7 @@ margin-bottom: initial;
 <br>
 <<h2><FONT COLOR=white><center><strong>Easy to Expand Internationally</strong></center></FONT></h2>
 <br>
-<p>For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.</FONT></p>
+<p>For online store owners, it’s easier to launch products internationally because they only have to work out international shipping to be able to do so.</p>
 <br>
 <h2><FONT COLOR=white><center><strong>Comfortable Shopping Experience for Customers</strong></center></FONT></h2>
 <br>
