--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ margin-bottom: initial;
 <br>
 <h2><FONT COLOR=white><center><strong>Potential to Earn Income 24/7</strong></center></FONT></h2>
 <br>
-<p>People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.<p>
+<p>People can browse the internet 24/7, which means that online stores have the potential to earn money and get customers even during late hours.</p>
 <br>
 <<h2><FONT COLOR=white><center><strong>Easy to Expand Internationally</strong></center></FONT></h2>
 <br>
