--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ margin-bottom: initial;
           </p></FONT>
 <br>
 <br>
-<h1><center><strong>BENEFITS OF E-COMMERCE</strong></center></h1>
+<h1><center><FONT COLOR=white><strong>BENEFITS OF E-COMMERCE</strong></FONT></center></h1>
 <br>
 <br>
 <h2><FONT COLOR=white><center><strong>Low Startup Cost</strong></center></FONT></h2>
