--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
 div {
-background-color: rgb(123, 17, 19);
+background-color: rgba(100, 0, 0);
 color: rgb(0, 0, 0);
 padding: 30px;
 }
