--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ padding: 30px;
     <h1 class="siteTitle">E-COMMERCE: A DISRUPTIVE TECHNOLOGY</h1>
     <div class="kv__images">
       <figure class="kv__img kv__img01">
-        <img src="1.gif" alt="">
+        <img src="1.img" alt="">
       </figure>
     
     </div>
