--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@ div {
 background-color: rgba(100, 0, 0);
 color: rgb(0, 0, 0);
 padding: 30px;
-}
-     </style>
-  
+} </style>  
   <title> E-COMMERCE: A DISRUPTIVE TECHNOLOGY </title>
   <link rel="stylesheet" type="text/css" href="style.css">
    
